<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.avion.funciona.Fragments.Menus"
    android:orientation="vertical"
    android:id="@+id/FragmentMenu"
    >

        <LinearLayout
            android:clickable="true"
            android:id="@+id/summary_portrait"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:background="#fff"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondary" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/calendar"
                android:padding="8dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/summary_text"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:paddingLeft="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/accounts_portrait"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:background="#fff"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondaryLight"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/bank"
                android:padding="8dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/accounts_text"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:paddingLeft="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/incomes_portrait"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:background="#fff"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondary"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/dollar"
                android:padding="8dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:paddingLeft="4dp"
                android:text="@string/incomes_text"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/expenses_portrait"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:background="#fff"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondaryLight"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/cart"
                android:padding="8dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/expenses_text"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:paddingLeft="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:clickable="true"
            android:id="@+id/stock_portrait"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:background="#fff">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondary" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="8dp"
                android:src="@drawable/item" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:paddingLeft="4dp"
                android:text="@string/stock"
                android:textColor="#000"
                android:textSize="20sp"
                />
        </LinearLayout>
</LinearLayout>
